<resources>
    <string name="app_name">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="olvido">olvidaste tu contraseña?</string>
    <string name="titulo">Rick and Morty</string>
    <string name="texto_boton_continuar">Continuar</string>
    <string name="edit_text_usuario">Usuario</string>
    <string name="edit_text_contrasenia">Contraseña</string>
    <string name="character_name_text">Nombre del Personaje</string>
    <string name="character_status_text">Status del Personaje</string>
    <string name="character_preference_night_mode">Modo Nocturno</string>
    <string name="character_preference_searcher_enabled">Buscador Habilitado</string>
    <string name="character_preference_allow_favorites">Permitir agregar a Favoritos</string>
    <string name="character_preference_gender">Genero</string>
    <string name="detail_favorite">Favorito</string>

</resources>